Fix - jumping position while dragging field wrapper

--- a/assets/css/scss/_admin.scss
+++ b/assets/css/scss/_admin.scss
@@ -343,6 +343,7 @@
 
 				.evf-admin-field-wrapper {
 					padding: 0 15px;
+					position: relative;
 
 					&.evf-hover {
 						background-color: $color-brand-primary-light;
